--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
-    "node-sass": "^4.14.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-sass": "^3.4.1",
+    "node-sass": "4.14.1",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
