--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "bootstrap-sass": "^3.4.1",
+    "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "prettier": "^2.1.2",
     "react": "^16.13.1",
