--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 #.env file
+#Update env in prod
 REACT_APP_API_BASE_URL='http://localhost:8000'
 REACT_APP_API_VERSION=''
 REACT_APP_ENVIRONMENT='development'
