--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 #.env file
 #Update env in prod
-REACT_APP_API_BASE_URL='http://localhost:8000'
+REACT_APP_API_BASE_URL='https://wivc1nikq7.execute-api.us-east-2.amazonaws.com/Prod'
 REACT_APP_API_VERSION=''
 REACT_APP_ENVIRONMENT='development'
 REACT_APP_API_TOKEN='token'
